fix(Section): Fix section overlapping when resizing browser
Change height to min-height on frontPage

--- a/client/src/pages/home/styles.scss
+++ b/client/src/pages/home/styles.scss
@@ -3,9 +3,9 @@
 .pages_home {
     section {
         @include flex(column, true);
-        height: 100vh;
     }
     .sectionFrontPage {
+        min-height: 100vh;
         .homePageLogo {
             border-radius: 50%;
         }
